# fit-manage-qr-detector

./: README.md  pyproject.toml
src/fit_manage_qr_detector/: camera.py  detector.py  gate.py  logger.py  main.py  validator.py
systemd/: fit-manage-qr-detector.service
